<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:id="@+id/top_layer_next_item_caller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/grey_gradient"
        android:orientation="horizontal">

        <TextView
            style="@style/BlackText"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/current_item"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <EditText
        android:id="@+id/number_of_packages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/showItemQty"
        android:layout_alignStart="@+id/showItemQty"
        android:layout_below="@+id/showItemQty"
        android:layout_marginTop="92dp"
        android:layout_weight="1"
        android:hint="@string/number_of_packages_hint"
        android:inputType="number" />


    <TextView
        android:id="@+id/showItemName"
        style="@style/BlackText"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/number_of_packages"
        android:layout_below="@+id/top_layer_next_item_caller"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/showItemLoc"
        style="@style/BlackText"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showItemName"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:id="@+id/showItemQty"
        style="@style/BlackText"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/showItemLoc"
        android:layout_below="@+id/showItemLoc"
        android:layout_gravity="center"
        android:gravity="center" />


    <LinearLayout
        android:id="@+id/bottom_layer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/grey_gradient"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/bNextItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNextItemClick"
            android:text="Next Item" />

        <Button
            android:id="@+id/bstartQTY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onUpdateButtonClick"
            android:text="@string/update_button" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>